# Dev-portfolio-analyzer

backend/: .env  README.md  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  testback.py
backend/auth/: auth_bearer.py  auth_handler.py
backend/routes/: gamification.py  integrations.py  portfolio.py  resume.py  user.py
backend/services/: ai_evaluator.py  auto_enhancements.py  dynamic_scoring.py  gamification.py  integrations.py  portfolio_analyzer.py
portfolio-analyzer-remix/: package-lock.json  package.json
portfolio-analyzer-remix/app/: root.tsx
portfolio-analyzer-remix/app/components/: NavBar.jsx
portfolio-analyzer-remix/app/routes/: dashboard.jsx  login.jsx  register.jsx
