[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ganeshraja R <ganeshrajar2005@gmail.com>"]
readme = "README.md"
# Disable packaging the current project if you only need dependency management.
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
